# vx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml
docs/: api-guide.md  book.toml  getting-started.md  performance.md
docs/src/: SUMMARY.md  adding-a-kernel.md  architecture.md  design.md  examples.md  getting-started.md  introduction.md  performance.md  reconstruction-guide.md
docs/src/api/: analysis.md  context-texture.md  detection.md  geometry.md  motion-stereo.md  processing.md  reconstruction.md  visualization.md
examples/: advanced_cv_demo.rs  depth_to_cloud_demo.rs  edge_detection_demo.rs  fast_demo.rs  feature_matching_demo.rs  klt_benchmark.rs  orb_stereo_benchmark.rs  pipeline_pool_demo.rs  point_cloud_processing_demo.rs  threshold_demo.rs  tsdf_fusion_demo.rs  warp_resize_demo.rs
vx-core/: Cargo.toml
vx-core/src/: buffer.rs  device.rs  lib.rs
vx-vision/: Cargo.toml  build.rs
vx-vision/benches/: kernel_benchmarks.rs
vx-vision/shaders/: BilateralFilter.metal  BruteMatcher.metal  Canny.metal  ColorConvert.metal  ConnectedComponents.metal  DenseFlow.metal  DepthColorize.metal  DepthFilter.metal  DepthInpaint.metal  DepthToCloud.metal  DistanceTransform.metal  DoG.metal  FastDetect.metal  GaussianBlur.metal  HarrisResponse.metal  Histogram.metal  Homography.metal  HoughLines.metal  IndirectArgs.metal  IntegralImage.metal  KLTTracker.metal  MarchingCubes.metal  MeshRender.metal  Morphology.metal  NMS.metal  NormalEstimation.metal  ORBDescriptor.metal  OutlierFilter.metal  PointCloudRender.metal  Pyramid.metal  Resize.metal  SGMStereo.metal  Sobel.metal  StereoMatch.metal  TSDFIntegrate.metal  TSDFRaycast.metal  TemplateMatch.metal  Threshold.metal  Triangulate.metal  VoxelDownsample.metal  (+2 more)
vx-vision/src/: context.rs  error.rs  export.rs  lib.rs  mesh_ops.rs  pipeline.rs  pool.rs  render_context.rs  texture.rs  types.rs  types_3d.rs
vx-vision/src/datasets/: euroc.rs  kitti.rs  mod.rs  tum.rs
vx-vision/src/kernels/: bilateral.rs  canny.rs  color.rs  connected.rs  dense_flow.rs  depth_colorize.rs  depth_filter.rs  depth_inpaint.rs  depth_to_cloud.rs  distance.rs  dog.rs  fast.rs  gaussian.rs  harris.rs  histogram.rs  homography.rs  hough.rs  indirect.rs  integral.rs  klt.rs  marching_cubes.rs  matcher.rs  mc_tri_table.inc  mod.rs  morphology.rs  nms.rs  normal_estimation.rs  orb.rs  outlier_filter.rs  pyramid.rs  resize.rs  sgm.rs  sift.rs  sobel.rs  stereomatch.rs  template_match.rs  threshold.rs  triangulate.rs  tsdf.rs  undistort.rs  (+2 more)
vx-vision/src/renderers/: mesh_renderer.rs  mod.rs  point_cloud_renderer.rs
vx-vision/tests/: test_context.rs  test_kernels.rs  test_pool.rs
