[workspace]
members = [
    "vx-core",
    "vx-vision",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Mitterrand Ekole"]
repository = "https://github.com/MisterEkole/vx-rs"
documentation = "https://misterekole.github.io/vx-rs/"

[workspace.dependencies]
objc2            = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL"] }
objc2-metal      = { version = "0.3", features = [
    "MTLDevice",
    "MTLCommandQueue",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLComputeCommandEncoder",
    "MTLComputePipeline",
    "MTLRenderCommandEncoder",
    "MTLRenderPipeline",
    "MTLRenderPass",
    "MTLDepthStencil",
    "MTLBuffer",
    "MTLTexture",
    "MTLLibrary",
    "MTLResource",
    "MTLTypes",
    "MTLPixelFormat",
    "MTLVertexDescriptor",
]}
bytemuck = { version = "1", features = ["derive"] }