[package]
name = "vx-core"
description = "Memory management and Metal wrappers for VX"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
objc2.workspace            = true
objc2-foundation.workspace = true
objc2-metal.workspace      = true
bytemuck.workspace         = true