[package]
name = "vx-gpu"
description = "Shared-memory Metal buffer management for Apple Silicon UMA"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["gpu", "metal", "apple-silicon", "computer-vision"]
categories = ["graphics", "os::macos-apis"]

[dependencies]
objc2.workspace            = true
objc2-foundation.workspace = true
objc2-metal.workspace      = true
bytemuck.workspace         = true