[package]
name = "vx-vision"
description = "GPU-accelerated computer vision for Apple Silicon via Metal compute shaders"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
documentation.workspace = true
keywords = ["gpu", "metal", "computer-vision", "apple-silicon", "image-processing"]
categories = ["computer-vision", "graphics", "os::macos-apis"]
include = [
    "src/**/*.rs",
    "shaders/**/*.metal",
    "tests/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
]

[dependencies]
vx-gpu = { path = "../vx-core", version = "0.2.0" }

objc2.workspace            = true
objc2-foundation.workspace = true
objc2-metal.workspace      = true
bytemuck.workspace         = true

[dev-dependencies]
image = "0.25"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kernel_benchmarks"
harness = false

[[example]]
name = "fast_demo"
path = "../examples/fast_demo.rs"
[[example]]
name = "klt_benchmark"
path = "../examples/klt_benchmark.rs"
[[example]]
name = "orb_stereo_benchmark"
path = "../examples/orb_stereo_benchmark.rs"
[[example]]
name = "edge_detection_demo"
path = "../examples/edge_detection_demo.rs"
[[example]]
name = "warp_resize_demo"
path = "../examples/warp_resize_demo.rs"
[[example]]
name = "threshold_demo"
path = "../examples/threshold_demo.rs"
[[example]]
name = "advanced_cv_demo"
path = "../examples/advanced_cv_demo.rs"
[[example]]
name = "feature_matching_demo"
path = "../examples/feature_matching_demo.rs"
[[example]]
name = "pipeline_pool_demo"
path = "../examples/pipeline_pool_demo.rs"
